--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -1,12 +1,144 @@
 ---
 layout: archive
-title: "Teaching"
+title: "Teaching Activities"
 permalink: /teaching/
 author_profile: true
 ---
 
+<h2> Teaching Responsabilites </h2>
+<HR>
+<div class="wordwrap" style="text-align: justify;">
+At the Aix-Marseille Institute of Technology, I am  the internship manager for the students in second an third years of Bachelor of Technical Studies in computer science, during 1 year. I was also the  leader of the  SAé (Situation d’Apprentissage et d’Évaluation) for the students in second years of Bachelor of Technical Studies in computer science, during 2 years. 
+</div>
+
+<h2> Teaching Experience </h2>
+<HR>
+
+<ul>
+  <li>
+    <h3>The Aix-Marseille Institute of Technology </h3>
+	Diploma : Bachelor's Degree in Technical Studies – Computer Science<br>
+		<ul>
+			<li>
+				<h3>Communication et fonctionnement bas niveau  (Low-Level Communication and Operation)</h3>
+				Keywords : Network types and topologies, OSI model, encapsulation, IPv4 protocol, IPv4 addressing, subnetworks, VLSM, routing <br>
+				4h Lectures / 32h Tutorials / 26h Labs<br>
+				<!-- Diploma: Bachelor's Degree in Technical Studies – Computer Science<br> -->
+				<!-- Ressources: [ProgAvancee-1-Rappels.pdf] [ProgAvancee-2-PythonToC.pdf] [ProgAvancee-3-Complexite.pdf]<br> -->
+			</li>
+			<li>
+				<h3>Initiation au développement (Introduction to Software Development)</h3>
+				Keywords : Algorithms, data structures, sorting, arrays and dictionaries, streams, class, assertions, Qt Creator IDE <br>
+				42h Tutorials / 40h Labs<br>
+				<!-- Diploma: Bachelor's Degree in Technical Studies – Computer Science<br> -->
+			</li>
+			<li>
+				<h3>Introduction aux services réseaux (Fundamentals of Network Services )</h3>
+				Keywords: ARP, ICMP, TCP, UDP, client-Server Architecture<br>
+				6h Tutorials / 10h Labs<br>
+				<!-- Diploma: Bachelor's Degree in Technical Studies – Computer Science<br> -->
+			</li>
+			<li>
+				<h3>Architecture des réseaux (Network Architecture )</h3>
+				Keywords : TCP/IP/UDP, DHCP, NAT, RIP, OSPF<br>
+				4h Tutorials / 8h Labs<br>
+				<!-- Diploma: Bachelor's Degree in Technical Studies – Computer Science<br> -->
+			</li>
+			<li>
+				<h3>Architecture logicielle (Software Architecture )</h3>
+				Keywords : MVC, Microservices Architecture, Service-Oriented Architecture (SOA)<br>
+				9h Tutorials / 16h Labs<br>
+				<!-- Diploma: Bachelor's Degree in Technical Studies – Computer Science<br> -->
+			</li>
+			<li>	
+				<h3>Complément Web (Web Supplement)</h3>
+				Keywords: JavaScript, DOM,object-oriented programming in ECMAScript 6<br>
+				6h Lectures / 12h Tutorials / 26h Labs<br>
+				<!-- Diploma: Bachelor's Degree in Technical Studies – Computer Science<br> -->
+				<!-- Ressources: [ProgAvancee-1-Rappels.pdf] [ProgAvancee-2-PythonToC.pdf] [ProgAvancee-3-Complexite.pdf]<br> -->
+			</li>
+			<li>	
+				<h3>Programmation système (System Programming )</h3>
+				Keywords : System calls, files, processes, signals, and threads; client-server programming (sockets), TCP/UDP client-server communication.<br>
+				24h Tutorials / 12h Labs<br>
+				<!-- Diploma: Bachelor's Degree in Technical Studies – Computer Science<br> -->
+				<!-- Ressources: [ProgAvancee-1-Rappels.pdf] [ProgAvancee-2-PythonToC.pdf] [ProgAvancee-3-Complexite.pdf]<br> -->
+			</li>
+			<li>	
+				<h3>Nouveaux paradigmes de base de données (New Database Paradigms )</h3>
+				Keywords : NoSQL, MongoDB, Big Data<br>
+				8h Lectures / 32h Tutorials / 16h Labs<br>
+				<!-- Diploma: Bachelor's Degree in Technical Studies – Computer Science<br> -->
+				<!-- Ressources: [ProgAvancee-1-Rappels.pdf] [ProgAvancee-2-PythonToC.pdf] [ProgAvancee-3-Complexite.pdf]<br> -->
+			</li>
+				<h3>Programmation avancé en système (Advanced System Programming)</h3>
+				Keywords : concurrent Programming, multithreading, thread Synchronization, mutexes, semaphores,process scheduling<br>
+				8h Tutorials / 4h Labs<br>
+				<!-- Diploma: Bachelor's Degree in Technical Studies – Computer Science<br> -->
+				<!-- Ressources: [ProgAvancee-1-Rappels.pdf] [ProgAvancee-2-PythonToC.pdf] [ProgAvancee-3-Complexite.pdf]<br> -->
+			</li>	
+			</li>
+				<h3>Programmation répartie (Distributed Programming)</h3>
+				Keywords : client-Server Programming, Socket(C, Java), <br>
+				23h Tutorials / 29h Labs<br>
+				<!-- Diploma: Bachelor's Degree in Technical Studies – Computer Science<br> -->
+				<!-- Ressources: [ProgAvancee-1-Rappels.pdf] [ProgAvancee-2-PythonToC.pdf] [ProgAvancee-3-Complexite.pdf]<br> -->
+			</li>			
+		</ul
+  </li>
+  <HR>
+  <li>
+    <h3>The Computer Science Department, Faculty of Sciences of Tunis (University of Tunis El Manar)</h3>
+		Diploma : Engineering degree in Computer Science, specializing in Software Engineering / Data Science <br>
+		<ul>
+			<li>
+				<h3>Architecture logicielle (Software Architecture)</h3>
+				Keywords : UML, 1-tier, 2-tier, 3-tier, and n-tier architectures, web services architecture, middleware, SOAP ,  WSDL, UDDI,  XML, XSD <br>
+				42h Integrated Course (Lectures, Tutorials, and Labs)<br>
+				<!-- Diploma: Bachelor's Degree in Technical Studies – Computer Science<br> -->
+				<!-- Ressources: [ProgAvancee-1-Rappels.pdf] [ProgAvancee-2-PythonToC.pdf] [ProgAvancee-3-Complexite.pdf]<br> -->
+			</li>
+		</ul>	
+  </li>
+  <HR>
+  <li>
+    <h3>The Computer Science Department, Higher Institute of Information and Communication Technologies (ISTIC, University of Carthage)</h3>
+		<ul>	
+			Bachelor’s Degree in Network and Systems Engineering
+			<li>
+				<h3>Programmation web dynamique (Dynamic Web Programming)</h3>
+				Keywords : HTML, CSS, Bootstrap, MySQL and PHP<br>
+				24 Lectures <br>
+				<!-- Diploma: Bachelor's Degree in Technical Studies – Computer Science<br> -->
+				<!-- Ressources: [ProgAvancee-1-Rappels.pdf] [ProgAvancee-2-PythonToC.pdf] [ProgAvancee-3-Complexite.pdf]<br> -->
+			</li>
+		</ul>
+  </li>
+
+  <HR>
+   <li>
+	<h3>The Private Higher School of Engineering and Technology (ESPRIT)</h3>
+		Diploma : Engineering degree in Computer Science <br>
+		<ul>
+			<li>
+				<h3> Architecture logicielle (Software Architecture )</h3>
+				Keywords : UML 2.0 <br>
+				42h Integrated Course (Lectures, Tutorials, labs)<br>
+				<!-- Diploma: Bachelor's Degree in Technical Studies – Computer Science<br> -->
+				<!-- Ressources: [ProgAvancee-1-Rappels.pdf] [ProgAvancee-2-PythonToC.pdf] [ProgAvancee-3-Complexite.pdf]<br> -->
+			</li>
+		</ul>	
+   </li>
+</ul>
+
+
+
+
+
+<!--
 {% include base_path %}
 
 {% for post in site.teaching reversed %}
   {% include archive-single.html %}
 {% endfor %}
+-->
